fixtures/metadata-resolve/failing/models/duplicate_argument/resolve_error.expected
Error: the following argument in model with_arguments (in subgraph default) is defined more than once: duplicate_argument
    ╭─[ <unknown>:19:25 ]
    │
 19 │                 "name": "duplicate_argument",
    │                         ──────────┬─────────  
    │                                   ╰─────────── Model 'with_arguments' has a duplicate argument definition for 'duplicate_argument'
────╯
